# 2d_raycasting

./: CMakeLists.txt  README.md  box_raycasting.md  transformation_tree.md
src/: constants.hpp  draw.hpp  geometry.cpp  geometry.hpp  image.hpp  io.cpp  io.hpp  main.cpp  radians.hpp  raycast.cpp  raycast.hpp  transformations.cpp  transformations.hpp  utility.cpp  utility.hpp
test/: test_bounding_box.cpp  test_draw.cpp  test_geometry.cpp  test_image.cpp  test_radians.cpp  test_transformations.cpp
